--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,9 @@
     <groupId>cn.chenzw.excel</groupId>
     <artifactId>magical-excel</artifactId>
     <version>1.0.3</version>
+    <name>magical-excel</name>
+    <description>基于注解的Excel导入导出组件</description>
+    <url>https://github.com/otary/magical-excel</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -18,6 +21,7 @@
         <logback.version>1.2.3</logback.version>
         <poi.version>3.15</poi.version>
     </properties>
+
 
     <dependencies>
         <dependency>
@@ -75,11 +79,138 @@
         </dependency>
     </dependencies>
 
+    <build>
+        <testResources>
+            <testResource>
+                <directory>${basedir}/excel-template</directory>
+                <targetPath>${build.testOutputDirectory}/excel-template</targetPath>
+            </testResource>
+        </testResources>
+    </build>
 
+
+    <licenses>
+        <license>
+            <name>Apache License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
+    <issueManagement>
+        <url>https://github.com/otary/magical-excel/issues</url>
+        <system>GitHub Issues</system>
+    </issueManagement>
+
+    <!-- 开发者信息 -->
+    <developers>
+        <developer>
+            <name>chenzw</name>
+            <email>656469722@qq.com</email>
+            <url>https://github.com/otary</url>
+        </developer>
+    </developers>
+
+    <!-- 开源地址 -->
+    <scm>
+        <connection>scm:git:git@github.com:otary/magical-excel.git</connection>
+        <developerConnection>scm:git:git@github.com:otary/magical-excel.git</developerConnection>
+        <url>git@github.com:otary/magical-excel.git</url>
+    </scm>
+
+    <!-- 发布配置 -->
     <distributionManagement>
         <repository>
-            <id>itm-release</id>
-            <url>http://192.168.17.223:8085/repository/maven-3rd/</url>
+            <id>sonatype-oss</id>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
         </repository>
+        <snapshotRepository>
+            <id>sonatype-oss</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+
     </distributionManagement>
+
+    <profiles>
+        <profile>
+            <id>oss-release</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.sonatype.plugins</groupId>
+                        <artifactId>nexus-staging-maven-plugin</artifactId>
+                        <version>1.6.8</version>
+                        <extensions>true</extensions>
+                        <configuration>
+                            <!-- 发布服务ID -->
+                            <serverId>sonatype-oss</serverId>
+                            <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+                            <autoReleaseAfterClose>true</autoReleaseAfterClose>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-gpg-plugin</artifactId>
+                        <version>1.5</version>
+                        <executions>
+                            <execution>
+                                <id>sign-artifacts</id>
+                                <phase>verify</phase>
+                                <goals>
+                                    <goal>sign</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-source-plugin</artifactId>
+                        <version>2.2.1</version>
+                        <executions>
+                            <execution>
+                                <id>attach-sources</id>
+                                <goals>
+                                    <goal>jar-no-fork</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                        <version>2.9.1</version>
+                        <executions>
+                            <execution>
+                                <id>attach-javadocs</id>
+                                <goals>
+                                    <goal>jar</goal>
+                                </goals>
+                                <configuration>
+                                    <additionalparam>-Xdoclint:none</additionalparam>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <artifactId>maven-assembly-plugin</artifactId>
+                        <version>2.3</version>
+                        <configuration>
+                            <descriptorRefs>
+                                <descriptorRef>jar-with-dependencies</descriptorRef>
+                            </descriptorRefs>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>single</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
