--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>cn.chenzw.excel</groupId>
     <artifactId>magical-excel</artifactId>
-    <version>1.0.4</version>
+    <version>1.0.5</version>
     <name>magical-excel</name>
     <description>基于注解的Excel导入导出组件</description>
     <url>https://github.com/otary/magical-excel</url>
@@ -19,8 +19,8 @@
         <commons-lang3.version>3.5</commons-lang3.version>
         <guava.version>20.0</guava.version>
         <logback.version>1.2.3</logback.version>
-        <!--<poi.version>3.15</poi.version>-->
-        <poi.version>4.1.1</poi.version>
+        <poi.version>3.15</poi.version>
+        <!--  <poi.version>4.1.1</poi.version>-->
     </properties>
 
 
@@ -49,9 +49,17 @@
         </dependency>
 
         <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.6</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>${guava.version}</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
@@ -83,7 +91,7 @@
         <dependency>
             <groupId>cn.chenzw.toolkit</groupId>
             <artifactId>toolkit</artifactId>
-            <version>1.0.1</version>
+            <version>1.0.2</version>
         </dependency>
 
     </dependencies>
